# scriptum

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.md.bak  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REVIEW.md  SPEC.md  biome.json  cargo-deny.toml  clippy.toml  deny.toml  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts  worker-prompt.md
.beads/: config.yaml  feedback.json  issues.jsonl
.changeset/: config.json
.claude/: settings.json
.claude/hooks/scriptum/: post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-start.sh  stop.sh
.config/: nextest.toml
.github/workflows/: build.yml  compatibility.yml  deployment-strategy.yml  golden-tests.yml  integration.yml  lint.yml  load.yml  property-tests.yml  release.yml  security.yml  test-rust.yml  test-ts.yml
contracts/: README.md  daemon-ports.json  desktop-menu.json  error-codes.json  jsonrpc-methods.json  roles.json  storage-keys.json  ws-protocol.json
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  daemon_launcher.rs  exit_code.rs  main.rs  output.rs
crates/cli/src/commands/: agents.rs  blame.rs  bundle.rs  checkpoint.rs  claim.rs  conflicts.rs  diff.rs  doctor.rs  edit.rs  init.rs  ls.rs  mod.rs  new.rs  peek.rs  read.rs  search.rs  sections.rs  setup.rs  status.rs  tree.rs  whoami.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  types.rs
crates/common/src/backlink/: mod.rs
crates/common/src/crdt/: origin.rs
crates/common/src/diff/: patch.rs
crates/common/src/path/: mod.rs  normalize.rs
crates/common/src/protocol/: jsonrpc.rs  mod.rs  rpc_methods.rs  ws.rs
crates/common/src/section/: mod.rs  parser.rs  slug.rs
crates/common/tests/: golden_runner.rs  rpc_methods_contract.rs  ws_protocol_contract.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  lib.rs  main.rs  runtime.rs  security.rs  startup.rs
crates/daemon/src/agent/: edits.rs  lease.rs  mod.rs  session.rs
crates/daemon/src/engine/: awareness.rs  doc_manager.rs  mod.rs  ydoc.rs
crates/daemon/src/git/: attribution.rs  commit.rs  leader.rs  mod.rs  triggers.rs  worker.rs
crates/daemon/src/history/: mod.rs
crates/daemon/src/outbox/: mod.rs
crates/daemon/src/relay/: mdns.rs  mod.rs
crates/daemon/src/rpc/: methods.rs  mod.rs  trace.rs  unix.rs  ws.rs  yjs_ws.rs
crates/daemon/src/search/: backlinks.rs  fts.rs  indexer.rs  mod.rs
crates/daemon/src/section/: mod.rs  overlap.rs
crates/daemon/src/store/: documents_local.rs  meta_db.rs  mod.rs  recovery.rs  snapshot.rs  wal.rs
crates/daemon/src/watcher/: debounce.rs  hash.rs  mod.rs  pipeline.rs
crates/daemon/tests/: agent_flow_e2e_integration.rs  cli_edit_crdt_spike.rs  crash_recovery_integration.rs  crdt_convergence_property.rs  daemon_file_watcher_integration.rs  diff_to_yjs_property.rs  git_worker_e2e_integration.rs  jsonrpc_contract_integration.rs  rpc_transport_integration.rs  security_path_traversal.rs  wal_persistence_integration.rs  yjs_ws_integration.rs
crates/relay/: Cargo.toml
crates/relay/src/: config.rs  cors.rs  error.rs  etag.rs  idempotency.rs  main.rs  metrics.rs  protocol.rs  validation.rs
crates/relay/src/api/: auth.rs  comments.rs  documents.rs  members.rs  mod.rs  search.rs  workspaces.rs
crates/relay/src/audit/: mod.rs
crates/relay/src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs
crates/relay/src/awareness/: mod.rs
crates/relay/src/db/: migrations.rs  mod.rs  pool.rs
crates/relay/src/db/migrations/: 0001_init_schema.sql  0002_workspace_invites.sql  0003_git_leader_leases.sql
crates/relay/src/leader/: mod.rs
crates/relay/src/sync/: doc_manager.rs  mod.rs  sequencer.rs  snapshot.rs
crates/relay/src/ws/: handler.rs  mod.rs  protocol.rs  session.rs  tests.rs
crates/relay/tests/: db_migrations_integration.rs  db_pool_integration.rs  rest_contract.rs  security_authz.rs  security_token.rs  ws_contract.rs
docker/: .env.example  compose.yml  relay.Dockerfile
docs/: relay-rbac-audit-checklist.md  relay-setup.md
docs/ops/: deployment-strategy.md
ops/: README.md
ops/alerting/: relay-alerts.yml
ops/runbooks/: availability-drop.md  latency-breach.md  outbox-growth.md  sync-error-spike.md
scripts/ci/: pipeline.sh  rust-coverage.sh
scripts/release/: evaluate_desktop_ring_gate.sh  evaluate_relay_rollout_gate.sh
tests/e2e/: desktop-webdriver.config.mts  playwright.auth.config.mts  playwright.config.mts  playwright.first-run.config.mts  playwright.realtime.config.mts  playwright.relay-integration.config.mts  playwright.session-edge.config.mts  playwright.tauri-auth.config.mts
tests/e2e/fixtures/: auth-callback.json  editor-default-synced.json  editor-live-preview-rich.json  presence-overlap-warning.json  reconciliation-conflict.json  settings-page.json  sync-error-agent.json  sync-offline-dirty.json  sync-reconnecting.json  workspace-sidebar.json
tests/e2e/helpers/: auth-helpers.mts  relay-client.mts  tauri-mock.mts
tests/e2e/specs/: aria-snapshots.spec.mts  auth-flow.spec.mts  comment-thread-lifecycle.spec.mts  desktop-tauri-webdriver.spec.mts  document-deletion.spec.mts  document-tree-drag-drop.spec.mts  first-edit-flow.spec.mts  layout-contract.spec.mts  mermaid-live-preview.spec.mts  presence-overlap-overlays.spec.mts  realtime-collaboration.spec.mts  reconciliation-inline-ui.spec.mts  relay-integration.spec.mts  session-edge-cases.spec.mts  share-links.spec.mts  slash-commands.spec.mts  smoke-fixtures.mts  smoke-fixtures.test.ts  tauri-desktop-auth.spec.mts  ui-smoke.spec.mts
tests/e2e/specs/comment-thread-lifecycle.spec.mts-snapshots/: comment-thread-lifecycle-e2e-smoke-create-re-31c8e-pen-thread-with-gutter-aria-coverage-smoke-2.aria.yml  comment-thread-lifecycle-e2e-smoke-create-re-ab634-pen-thread-with-gutter-aria-coverage-smoke-1.aria.yml
tests/e2e/specs/document-deletion.spec.mts-snapshots/: document-deletion-e2e-smoke-deletes-active-document-via-context-menu-after-confirmation-smoke-1.aria.yml
tests/golden/: runner.rs
tests/golden/cases/empty_section_fill/: after.md  before.md  expected_ops.json
tests/load/: README.md  run-relay-load.sh
(+37 files in other folders)
