[workspace]
members = [
    "crates/common",
    "crates/daemon",
    "crates/cli",
    "crates/relay",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/garybasin/scriptum"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CRDT
yrs = "0.21"

# File watching
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

# Local database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP / WebSocket server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Relay auth + database
jsonwebtoken = "9"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono", "json"] }
url = "2"

# Config
toml = "0.8"
dirs = "6"

# Unicode normalization
unicode-normalization = "0.1"

# Internal crates
scriptum-common = { path = "crates/common" }
