[package]
name = "scriptum-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "scriptum"
path = "src/main.rs"

[dependencies]
scriptum-common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
