[package]
name = "scriptum-daemon"
version = "0.1.0"
edition.workspace = true

[dependencies]
scriptum-common = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
yrs = { workspace = true, features = ["sync"] }

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio-tungstenite = "0.28"
