[package]
name = "scriptum-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
scriptum-common = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
regex = "1"
toml = { workspace = true }
dirs = { workspace = true }
yrs = { workspace = true, features = ["sync"] }
tiktoken-rs = { workspace = true }
url = { workspace = true }
keyring = "3"
chacha20poly1305 = { version = "0.10", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
futures-util = "0.3"
proptest = "1"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite = "0.28"

[lints]
workspace = true
