[package]
name = "scriptum-relay"
version = "0.1.0"
edition.workspace = true

[dependencies]
scriptum-common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
