[package]
name = "scriptum-relay"
version = "0.1.0"
edition.workspace = true

[dependencies]
scriptum-common = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
yrs = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.28"
