[package]
name = "scriptum-relay"
version = "0.1.0"
edition.workspace = true

[dependencies]
scriptum-common = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
uuid = { workspace = true }
yrs = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
argon2 = "0.5"

[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = "0.3"
